# lpb_tui

./: .gitignore  CMakeLists.txt  config.yaml  go.mod  go.sum  main.cpp  main.go  readme.md  st7920.h  tif.toml
Startup/: startup.go
cmd/: calibrate.go  dryRun.go  moveTo.go  root.go
data/: profiles.go
data_recording/: data_recording.go
debian/: README.Debian  changelog  control  copyright  lpb-tif.install  rules
frame_handling/: frame_handling.go  frame_handling_test.go
handlers/: profiles.go
inverse_kinematics/: inverse_kinematics.go  inverse_kinematics_test.go  spacial_awareness.go  tracking.go
modes/: modes.go
multilogger/: multilogger.go
optest/: optest.go
pipes/: pipes.go
progressbar/: progressbar.go
protobuf/: drive.proto
screens/: manual.cpp
spacial_awareness/: spacial_awareness.go
storage/: profiles.go  storage.go  storage_test.go
textinterface/: model.go  profile_editor.go  run_options.go  teaching.go  top_screen.go  tui.go  utils.go
tracking/: tracking.go  tracking_test.go
tui/: model.go  profile_editor.go  result_screen.go  run_options.go  simulation.go  teaching.go  top_screen.go  tui.go
